--- a/main.html
+++ b/main.html
@@ -7,7 +7,9 @@
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-	
+	<div class="stage">
+		
+	</div>
 	<script src="http://code.jquery.com/jquery.min.js"></script>
 	<script src="js/app.js"></script>
 </body>
