--- a/main.html
+++ b/main.html
@@ -5,16 +5,23 @@
 	<title>Streetfighter</title>
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/main.css">
+	<link href='https://fonts.googleapis.com/css?family=Bangers' rel='stylesheet' type='text/css'>
+
 </head>
 <body>
 	<div class="main">
 		<div class="ryu">
 			<div class="ryu-still"></div>
 			<div class="ryu-ready"></div>
-			<div class="ryu-throwing"></div>		
+			<div class="ryu-throwing"></div>
+			<div class="ryu-cool"></div>		
 		</div>
-		<div class="hadouken">
-			
+		<div class="hadouken"></div>
+		<div class="instructions">
+			<h1>Ryu is ready when you are.  Click to throw a hadouken!</h1>
+		</div>
+		<div class="nice">
+			<h1>NICE!!!</h1>
 		</div>
 	</div>
 	<audio id="hadouken-sound" src="sound/hadouken.mp3"></audio>
