-add press x instructions -slight tweaks to app.js

--- a/main.html
+++ b/main.html
@@ -23,6 +23,9 @@
 		<div class="nice">
 			<h1>NICE!!!</h1>
 		</div>
+		<div class="x">
+			<h1>Press X to see how cool you are!</h1>
+		</div>
 	</div>
 	<audio id="hadouken-sound" src="sound/hadouken.mp3"></audio>
 	<script src="http://code.jquery.com/jquery.min.js"></script>
